<resources>
    <string name="app_name">Books Dictionary</string>
    <string name="exit">Exit</string>
    <string name="author">Authors</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="pagesTotal">Pages Total</string>
    <string name="pagesRead">Pages Read</string>
    <string name="status">Status</string>
    <string name="inProgress">In Progress</string>
    <string name="notStarted">Not Started</string>
    <string name="finished">Finished</string>
    <string name="pagesFormat">read %d out of  %d</string>
    <string name="booksDictionary">Books Dictionary</string>
    <string name="enterAuthor">Enter Author</string>
    <string name="cancel">Cancel</string>
    <string name="selectStatus">Select Status</string>

    <string name="loadImage">Load Image</string>
    <string name="addBook">Add Book</string>
    <string name="filter">Filter</string>
</resources>