<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".books_list.BooksListFragment"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_scrollFlags = "scroll|enterAlways|enterAlwaysCollapsed"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_book_button" />

        <Button
            android:id="@+id/add_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addBook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="106dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="0dp"
            android:text="@string/filter"
            app:layout_constraintEnd_toEndOf="@+id/add_book_button"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editAuthor"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:hint="@string/enterAuthor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAuthor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>